Fix edit/delete comment buttons being visible even when not author
Closes #6

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -281,7 +281,7 @@ body{
     padding: 18px 0;
 }
 
-.comment:hover .control-btn {
+.comment:hover .control-btn.is-visible {
     visibility: visible;
     opacity: 1;
 }
